CREATE TABLE IF NOT EXISTS "users" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "username" varchar UNIQUE NOT NULL,
  "password" varchar NOT NULL,
  "email" varchar UNIQUE NOT NULL,
  "updated_at" timestamp,
  "created_at" timestamp NOT NULL DEFAULT (now())
);